terraform/02-sg/5.public_alb.tf
module "public_alb" {
  source      = "../../moduels/02.sg"
  component   = "public_alb"
  env         = var.env
  common_tags = var.common_tags
  vpc_id      = data.aws_ssm_parameter.vpc_id.value
  project     = var.project
}

resource "aws_security_group_rule" "public_alb_public" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = module.public_alb.sg_id
}

resource "aws_security_group_rule" "public_alb_public_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = module.public_alb.sg_id
}
